# MusicTranscriber

./: .gitignore  README.md  pyproject.toml
MusicTranscribe/: README.md  requirements.txt
MusicTranscribe/.devcontainer/: devcontainer.json
MusicTranscribe/music_transcriber/output/: chord_chart.txt
MusicTranscribe/music_transcriber/static/templates/: index.html
music_transcriber/: MusicAssist.py  app.py
music_transcriber/splits/: build.txt
