[tool.poetry]
name = "music_transcriber"
version = "0.1.0"
description = "A music transcription tool"
authors = ["Jacob Pellechia <jpellechia04@gmail.edu>"]
# python = "3.8.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
ffmpeg-python = "^0.2.0"
httpx = {extras = ["http2"], version = "^0.19.0"}
typer = "^0.3.2"
musdb = {version = "^0.4.0", optional = true}
museval = {version = "^0.4.0", optional = true}
tensorflow-io-gcs-filesystem = "^0.26.0"
tensorflow = "^2.8.0"
protobuf = "<=3.20.1"
pandas = "^1.3.0"
norbert = "^0.2.1"
librosa = "^0.10.1"
numpy = "^1.21.6"
pydub = "^0.25.1"
basic-pitch = "^0.2.6"
PySoundFile = "^0.8.0"
Flask = "^2.0.0"
spleeter = "2.4.0"
streamlit = "^1.36.0"
soundfile = "^0.12.1"
werkzeug = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
isort = "^5.7.0"
black = "^21.7b0"
mypy = "^0.790"
flake8 = "^5.0.0"
pytest-forked = "^1.3.0"

[tool.poetry.extras]
evaluation = ["musdb", "museval"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "-W ignore::FutureWarning -W ignore::DeprecationWarning -vv --forked"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"